<resources>
    <string name="app_name">Adventrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Where do you want to go?</string>
    <string name="category_text">Category</string>
    <string name="tv_example_city">Contoh Kota</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="label_orders">Orders</string>
    <string name="label_profile">Profile</string>
    <string name="label_good_day">Good day</string>
    <string name="label_username">Username</string>
    <string name="label_location">Location</string>
    <string name="title_nearby_places">Nearby Places</string>
    <string name="label_price">Price</string>
    <string name="label_date">Date</string>
    <string name="label_duration">Duration</string>
    <string name="empty_order">Oops, your order is still empty!</string>
    <string name="label_order_now">Order Now</string>
    <string name="title_order">Your Order</string>
    <string name="label_filter">Filter</string>
    <string name="label_items_purchased">Items Purchased</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_choose_a_payment_method">Choose a Payment Method</string>
    <string name="label_dummypay">DummyPay</string>
    <string name="label_total_price">Total Price</string>
    <string name="label_pay">Pay</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="please_log_in_to_get_started">Please log in to get started!</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_entry_ticket">Entry Ticket</string>
    <string name="desc_duration">Valid for 7 days from the date of purchase</string>
    <string name="label_0">0</string>
    <string name="label_activity_ticket">Activity Ticket</string>
    <string name="desc_error">Oops, your credentials are wrong, try again</string>
    <string name="your_web_client_id">577231665037-uutgmpbfcqstrqaqhqmeb8qvd61kaas8.apps.googleusercontent.com</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="format_location">%s, %s</string>
    <string name="desc_nearby_places">Discover mesmerising waterfalls, beautiful beaches, historical temples and other exciting sights.</string>
    <string name="title_most_visited_places">Most Visited Places</string>
    <string name="format_time">%s - %s</string>
    <string name="format_title_ticket_adult">%s Regular Ticket (Adult)</string>
    <string name="format_title_ticket_child">%s Regular Ticket (Child)</string>
    <string name="format_desc_ticket">Entry ticket for %s</string>
    <string name="format_price_IDR">IDR %s</string>
    <string name="format_price_Rp">Rp %s</string>
    <string name="label_valid_duration">Valid for 7 days from the date of purchase</string>
    <string name="title_recommended_places">Recommended Places</string>
    <string name="this_is_an_app_logo">This is an app logo</string>
    <string name="email">Email</string>
    <string name="label_transaction">Transaction</string>
    <string name="label_please_add_item_to_checkout">Please add atleast one item to checkout</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="desc_empty_ticket">Oops, no tickets available for now!</string>
    <string name="label_checkout">Chekout</string>
</resources>