<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.adventrack.features.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.adventrack.features.order.OrderFragment"
        android:label="@string/label_orders"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.adventrack.features.profile.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.adventrack.features.search.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search" />
</navigation>