<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/padding_16dp"
    android:paddingVertical="@dimen/padding_116dp"
    tools:context=".features.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo" />

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/TextContent.Heading.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextContent.Paragraph.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/please_log_in_to_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        style="@style/TextInputGlobal"

        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <EditText
            android:id="@+id/et_username"
            style="@style/TextInputGlobal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:textAppearance="@style/TextContent.Label.Small" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextInputGlobal"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/til_username"
        app:passwordToggleDrawable="@drawable/toggle_password"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextInputGlobal"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/textColorSecondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        style="@style/TextContent.SubHeading.XSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/ButtonGeneral.PrimaryVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/log_in"
        android:textAppearance="@style/TextContent.SubHeading.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />

    <ImageView
        android:id="@+id/iv_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_32dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:src="@drawable/bg_divider"
        app:layout_constraintEnd_toStartOf="@+id/tv_havent_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_havent_account"
        style="@style/TextContent.Paragraph.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_20dp"
        android:text="@string/don_t_have_account_yet"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <ImageView
        android:id="@+id/iv_divider_two"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_32dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:src="@drawable/bg_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_havent_account"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/ButtonGeneral.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/register"
        android:textAppearance="@style/TextContent.SubHeading.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_havent_account" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/TextContent.Label.XSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4dp"
        android:text="@string/desc_error"
        android:textColor="#FFE71735"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="#FFFF9B25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_marginVertical="@dimen/margin_20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>