<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/apl_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/siv_profile"
                    android:layout_width="@dimen/size_48dp"
                    android:layout_height="@dimen/size_48dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_profile_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:text="@string/label_username"
                    android:textAppearance="@style/TextContent.SubHeading.Small"
                    app:layout_constraintBottom_toTopOf="@id/tv_greeting"
                    app:layout_constraintStart_toEndOf="@id/siv_profile"
                    app:layout_constraintTop_toTopOf="@id/siv_profile"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_good_day"
                    android:textAppearance="@style/TextContent.Paragraph.Small"
                    app:layout_constraintBottom_toBottomOf="@+id/siv_profile"
                    app:layout_constraintStart_toStartOf="@id/tv_user_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/bg_gray_corner_66"
                    android:contentDescription="@string/label_location"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="@dimen/padding_8dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingHorizontal="@dimen/padding_12dp"
                    android:paddingVertical="@dimen/padding_8dp"
                    android:text="@string/label_location"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextContent.Paragraph.Small"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_greeting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_user_name" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>