<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_16dp"
    android:layout_marginTop="@dimen/margin_16dp"
    android:layout_marginBottom="@dimen/margin_16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/corner_16dp"
    app:cardElevation="0dp"
    app:strokeColor="#FFF4F4F4"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_24dp"
        android:paddingVertical="@dimen/padding_20dp">

        <ImageView
            android:id="@+id/iv_ticket"
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:src="@drawable/ic_ticket"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_items_purchased"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_label_items_purchased" />

        <TextView
            android:id="@+id/tv_label_items_purchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:text="@string/label_items_purchased"
            android:textAppearance="@style/TextContent.Heading.XSmall"
            app:layout_constraintStart_toEndOf="@id/iv_ticket"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textAppearance="@style/TextContent.SubHeading.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_items_purchased"
            tools:text="Snorkeling Raja Ampat" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:textAppearance="@style/TextContent.Label.XSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="Kota Sorong, Papua Barat" />

        <View
            android:id="@+id/dividerView"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/dotted_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location" />

        <ImageView
            android:id="@+id/iv_price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:src="@drawable/ic_price_tag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerView" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:textAppearance="@style/TextContent.SubHeading.XSmall"
            app:layout_constraintBottom_toBottomOf="@id/iv_price_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_price_tag"
            tools:text="Rp. 450.000,00" />

        <TextView
            android:id="@+id/tv_label_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@string/label_price"
            android:textAppearance="@style/TextContent.Label.XSmall"
            app:layout_constraintBottom_toBottomOf="@id/iv_price_tag"
            app:layout_constraintStart_toEndOf="@id/iv_price_tag"
            app:layout_constraintTop_toTopOf="@id/iv_price_tag" />

        <ImageView
            android:id="@+id/ic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:src="@drawable/ic_calender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_price_tag" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextContent.SubHeading.XSmall"
            app:layout_constraintBottom_toBottomOf="@id/ic_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_date"
            tools:text="18 May, 2023" />

        <TextView
            android:id="@+id/tv_label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@string/label_date"
            android:textAppearance="@style/TextContent.Label.XSmall"
            app:layout_constraintBottom_toBottomOf="@+id/ic_date"
            app:layout_constraintStart_toEndOf="@id/ic_date"
            app:layout_constraintTop_toTopOf="@id/ic_date" />

        <ImageView
            android:id="@+id/ic_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:src="@drawable/ic_shopping_bag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_date" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextContent.SubHeading.XSmall"
            app:layout_constraintBottom_toBottomOf="@id/ic_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_quantity"
            tools:text="4 People" />

        <TextView
            android:id="@+id/tv_label_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@string/label_quantity"
            android:textAppearance="@style/TextContent.Label.XSmall"
            app:layout_constraintBottom_toBottomOf="@+id/ic_quantity"
            app:layout_constraintStart_toEndOf="@id/ic_quantity"
            app:layout_constraintTop_toTopOf="@id/ic_quantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>