<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_100dp"
    android:paddingHorizontal="@dimen/padding_16dp"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:contentDescription="This is an app logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_adventrack"/>

    <TextView
        android:id="@+id/tv_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/register"
        style="@style/TextContent.Heading.Small"/>

    <TextView
        android:id="@+id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please create an account "
        style="@style/TextContent.Paragraph.Small"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_full_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/bg_edit_text"
        style="@style/TextInputGlobal">
        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextInputGlobal"
            android:textColorHint="@color/textColorSecondary"
            android:textAppearance="@style/TextContent.Label.Small"
            android:hint="Full Name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        app:layout_constraintTop_toBottomOf="@+id/til_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/bg_edit_text"
        style="@style/TextInputGlobal">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextInputGlobal"
            android:textAppearance="@style/TextContent.Label.Small"
            android:textColorHint="@color/textColorSecondary"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/til_username"
        android:layout_marginTop="@dimen/margin_16dp"
        app:passwordToggleDrawable="@drawable/ic_eye_open"
        app:passwordToggleEnabled="true"
        style="@style/TextInputGlobal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextInputGlobal"
            android:background="@drawable/bg_edit_text"
            android:textColor="@color/textColorSecondary"
            android:textColorHint="@color/textColorSecondary"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        android:layout_marginTop="@dimen/margin_16dp"
        app:passwordToggleDrawable="@drawable/ic_eye_open"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextInputGlobal"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/EditTextInputGlobal"
            android:background="@drawable/bg_edit_text"
            android:textColor="@color/textColorSecondary"
            android:textColorHint="@color/textColorSecondary"
            android:hint="Confirm Password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/til_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonGeneral.PrimaryVariant"
        android:text="@string/register"
        android:textAppearance="@style/TextContent.SubHeading.Medium"/>

    <TextView
        android:id="@+id/tv_already_have_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintEnd_toStartOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextContent.Paragraph.Small"
        android:layout_marginVertical="@dimen/margin_20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="Already have an account?"/>

    <TextView
        android:id="@+id/tv_login"
        android:paddingStart="@dimen/padding_2dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintStart_toEndOf="@+id/tv_already_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in here"
        android:textAppearance="@style/TextContent.SubHeading.Small"
        android:lineSpacingMultiplier="1.5"
        android:layout_marginVertical="@dimen/margin_20dp"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>